--- a/practice/styles/styles.css
+++ b/practice/styles/styles.css
@@ -1,7 +1,3 @@
-body {
-    text-align: center;
-  }
-
 nav {
     background-color: steelblue;
     padding: 10px;
@@ -13,11 +9,17 @@ a {
 }
 
 h1 {
+    text-align: center;
     color: steelblue;
 }
+nav, footer {
+    text-align: center;
+}
+
 img {
-    width: 800px;
-    border: 4px solid steelblue;
+    width: 80%;
+    display: block;
+    margin: 0 auto;
 }
 p {
     padding: 10px;
@@ -25,6 +27,10 @@ p {
 footer {
     background-color: steelblue;
     color: white;
+}
+a:hover {
+    background-color: white;
+    color: steelblue;
 }
 
 /*Adding classes*/
