--- a/practice/styles/styles.css
+++ b/practice/styles/styles.css
@@ -1,16 +1,17 @@
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 25px;
 }
 
 a {
     color: white;
-    margin: 40px;
+    padding: 25px;
 }
 
 h1 {
     text-align: center;
     color: steelblue;
+    margin: 50px 0;
 }
 nav, footer {
     text-align: center;
@@ -20,6 +21,7 @@ img {
     width: 80%;
     display: block;
     margin: 0 auto;
+    border: 4px solid steelblue;
 }
 p {
     padding: 10px;
@@ -27,6 +29,9 @@ p {
 footer {
     background-color: steelblue;
     color: white;
+}
+footer p {
+    padding: 25px;
 }
 a:hover {
     background-color: white;
