--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,6 @@
+/*Permament Marker Font from Google Fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
 /*Max width to the whole page*/
 #content {
     max-width: 1600px;
@@ -5,6 +8,9 @@
 }
 .logo, .icon {
     width: 80px;
+}
+.icon {
+    padding-top: 10px;
 }
 #hero-img {
     width: 100%;
@@ -15,6 +21,7 @@ nav a {
     text-align: center;
     color: white;
     text-decoration: none;
+    padding: 35px;
 }
 #hero-msg h1 {
     text-align: center;
@@ -35,6 +42,13 @@ main {
 /*Adding color to each selector*/
 body {
     background-color: #AFDDE5;
+    font-family: "Verdana", "Geneva", "Tahoma", sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+h2 {
+    margin: 0;
 }
 header {
     background-color: #1768ac;
@@ -44,9 +58,13 @@ nav a:hover {
     color: white;
 }
 .book, .join {
+    font-size: 18px;
     background-color: white;
     color: black;
     text-decoration: none;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover {
     background-color: black;
@@ -57,22 +75,34 @@ nav a:hover {
 }
 .msg {
     background-color: #EFB11D;
+    line-height: 1.5em;
+    padding: 35px
 }
 footer {
     background-color: #1768ac;
     color: white;
+    padding: 25px 50px;
+}
+footer .social img {
+    padding-top: 15px;
 }
 .home-title {
-    color: black
+    font-family: "Permanent Marker", "Brush Script Mt", sans-serif;
+    font-size: 2em;
+    color: black;
+    margin-top: 10px;
 }
 h4 {
     color: black;
 }
 .msg h2 {
+    font-family: "Permanent Marker", "Brush Script Mt", sans-serif;
     color: #243453;
 }
 .msg p {
+    font-size: .8em;
     color: black;
+    padding-bottom: 15px;
 }
 footer a {
     color: white;
@@ -87,4 +117,28 @@ footer p a:hover {
 
 footer p {
     font-size: 1.2em;
+}
+.card-img {
+    border: 10px solid #243453;
+}
+main section img {
+    box-sizing: border-box;
+}
+/*Adding Padding (Specifically)*/
+#logo {
+    padding-top: 5px;
+}
+
+/*Adding Margin*/
+.rivers-card {
+    margin: 200px 0;
+}
+.camping-card {
+    margin: 200px 0;
+}
+.rapids-card {
+    margin: 200px 0;
+}
+footer {
+    margin-top: 200px;
 }
