--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,6 +1,88 @@
 /*Permament Marker Font from Google Fonts*/
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
+/*Setting up the grid for the wireframe*/
+/*HEADER*/
+header {
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+#logo_link {
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg h4 {
+    color: white;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
+/*MAIN*/
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+.card-img, .mountains {
+    width: 100%;
+}
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+#background {
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.msg {
+    grid-column: 6/10;
+    grid-row: 6/7;
+    background-color: #6f7364;
+    padding: 35px;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+/*Enchancements*/
+.card-img {
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
 /*Max width to the whole page*/
 #content {
     max-width: 1600px;
@@ -51,7 +133,7 @@ h2 {
     margin: 0;
 }
 header {
-    background-color: #1768ac;
+    background: rgba(23, 104, 172, .7);
 }
 nav a:hover {
     background-color: #243453;
@@ -82,14 +164,18 @@ footer {
     background-color: #1768ac;
     color: white;
     padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer .social img {
     padding-top: 15px;
 }
 .home-title {
     font-family: "Permanent Marker", "Brush Script Mt", sans-serif;
-    font-size: 2em;
-    color: black;
+    font-size: 2.5em;
+    color: #EFB11D;
     margin-top: 10px;
 }
 h4 {
@@ -142,3 +228,49 @@ main section img {
 footer {
     margin-top: 200px;
 }
+
+/*Responsive Design for Mobile Users*/
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    #hero-msg h1 {
+        color: #6f7364;
+    }
+    .home-title {
+        font-size: 25px;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+  
